--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,8 @@ description = "Commonbase Python SDK"
 readme = "README.md"
 license.file = "LICENSE"
 requires-python = ">=3.7"
-version = "0.1.0"
-dependencies = ["requests>=2.31.0"]
+version = "0.1.1"
+dependencies = ["requests>=2.31.0", "sseclient-py>=1.7.2"]
 urls.Homepage = "https://github.com/commonbaseapp/commonbase-python"
 urls.Source = "https://github.com/commonbaseapp/commonbase-python"
 urls.Tracker = "https://github.com/commonbaseapp/commonbase-python/issues"
