--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,11 +19,12 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install build
-          pip install pytest
+          pip install build requests sseclient-py python-dotenv pytest
       - name: Build package
         run: python -m build
       - name: Run Tests
+        env:
+          CB_PROJECT_ID: ${{ secrets.CB_PROJECT_ID }}
         run: pytest
 
   release:
