--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install build requests sseclient-py python-dotenv pytest
+          pip install build requests sseclient-py pytest
       - name: Build package
         run: python -m build
       - name: Run Tests
