chore: update ci to use api keys

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,7 @@ jobs:
       - name: Run Tests
         env:
           CB_PROJECT_ID: ${{ secrets.CB_PROJECT_ID }}
+          CB_API_KEY: ${{ secrets.CB_API_KEY }}
         run: pytest
 
   release:
