fix: add support for provider api keys

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
         env:
           CB_PROJECT_ID: ${{ secrets.CB_PROJECT_ID }}
           CB_API_KEY: ${{ secrets.CB_API_KEY }}
+          CB_OPENAI_API_KEY: ${{ secrets.CB_OPENAI_API_KEY }}
         run: pytest
 
   release:
